Convex Hull crash blender #90332

Closed
opened 2021-07-30 23:35:22 +02:00 by CHET · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-26 22:53, hash: 6ee14c966d
Commit that introduced the bug is 4ba06ad0a8

Short description of error
When use convex hull, and turn off "delete unused" - blender crash
blender_XRCOy7lnlq.jpg

vivaldi_6ZP7u1YnTA.jpg

test.blend

_bm_elem_index_get(const BMHeader * head) Line 135	C
bm_mesh_loops_calc_normals_for_loop(BMesh * bm, const float- [x] * vcos, const float- [x] * fnos, const short- [x] * clnors_data, const int cd_loop_clnors_offset, const bool has_clnors, BLI_Stack * edge_vectors, BMLoop * l_curr, float- [x] * r_lnos, MLoopNorSpaceArray * r_lnors_spacearr) Line 732	C
bm_mesh_loops_calc_normals_for_vert_without_clnors(BMesh * bm, const float- [x] * vcos, const float- [x] * fnos, float- [x] * r_lnos, const bool do_rebuild, const float split_angle_cos, MLoopNorSpaceArray * r_lnors_spacearr, BLI_Stack * edge_vectors, BMVert * v) Line 1091	C
bm_mesh_loops_calc_normals_for_vert_without_clnors_fn(void * userdata, MempoolIterData * mp_v, const TaskParallelTLS * tls) Line 1301	C
parallel_mempool_func(TaskPool * pool, void * taskdata) Line 388	C
Task::operator()() Line 179	C++
tbb::internal::function_task<Task>::execute() Line 1060	C++
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-26 22:53, hash: `6ee14c966d` Commit that introduced the bug is 4ba06ad0a8 **Short description of error** When use convex hull, and turn off "delete unused" - blender crash ![blender_XRCOy7lnlq.jpg](https://archive.blender.org/developer/F10248390/blender_XRCOy7lnlq.jpg) ![vivaldi_6ZP7u1YnTA.jpg](https://archive.blender.org/developer/F10248392/vivaldi_6ZP7u1YnTA.jpg) [test.blend](https://archive.blender.org/developer/F10248394/test.blend) ```lines _bm_elem_index_get(const BMHeader * head) Line 135 C bm_mesh_loops_calc_normals_for_loop(BMesh * bm, const float- [x] * vcos, const float- [x] * fnos, const short- [x] * clnors_data, const int cd_loop_clnors_offset, const bool has_clnors, BLI_Stack * edge_vectors, BMLoop * l_curr, float- [x] * r_lnos, MLoopNorSpaceArray * r_lnors_spacearr) Line 732 C bm_mesh_loops_calc_normals_for_vert_without_clnors(BMesh * bm, const float- [x] * vcos, const float- [x] * fnos, float- [x] * r_lnos, const bool do_rebuild, const float split_angle_cos, MLoopNorSpaceArray * r_lnors_spacearr, BLI_Stack * edge_vectors, BMVert * v) Line 1091 C bm_mesh_loops_calc_normals_for_vert_without_clnors_fn(void * userdata, MempoolIterData * mp_v, const TaskParallelTLS * tls) Line 1301 C parallel_mempool_func(TaskPool * pool, void * taskdata) Line 388 C Task::operator()() Line 179 C++ tbb::internal::function_task<Task>::execute() Line 1060 C++ ```
Author

Added subscriber: @cheteron

Added subscriber: @cheteron

#90264 was marked as duplicate of this issue

#90264 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. Can confirm the crash on current master

Introduced somewhere between 118803893e - 6ee14c966d

Thanks for the report. Can confirm the crash on current master Introduced somewhere between `118803893e` - `6ee14c966d`

Added subscribers: @ideasman42, @rjg

Added subscribers: @ideasman42, @rjg

@ideasman42 This is likely for you.

@ideasman42 This is likely for you.
Campbell Barton self-assigned this 2021-08-02 10:29:48 +02:00

Found the problem, will commit a fix shortly.

Found the problem, will commit a fix shortly.

This issue was referenced by 11cfa6c718

This issue was referenced by 11cfa6c718b7851a30f203c92e53c4dc6451ae1a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @Pasang, @lichtwerk

Added subscribers: @Pasang, @lichtwerk
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90332
No description provided.