Fix T90332: Auto-smooth crashes in edit-mode

Regression in 39b2a7bb7e815e051348bf5c5ec777d091324164
that meant non-manifold edges were not being tagged
when they should have been.